fix: 添加/login/debug
