# docs/swagger.yaml
@@ -20,6 +20,32 @@ definitions:
       total:
         type: integer
     type: object
+  script.CreateRequest:
+    properties:
+      changelog:
+        type: string
+      code:
+        type: string
+      content:
+        type: string
+      definition:
+        type: string
+      description:
+        type: string
+      name:
+        type: string
+      public:
+        description: 公开类型：1 公开 2 半公开
+        type: integer
+      type:
+        description: 脚本类型：1 用户脚本 2 脚本调用库 3 订阅脚本
+        type: integer
+      unwell:
+        description: '不适内容: 1 不适 2 适用'
+        type: integer
+      version:
+        type: string
+    type: object
   script.CreateResponse:
     properties:
       id:
@@ -109,7 +135,8 @@ paths:
       parameters:
       - in: body
         name: body
-        type: object
+        schema:
+          $ref: '#/definitions/script.CreateRequest'
       produces:
       - application/json
       responses:
